--- a/passwordManagerProject/style.css
+++ b/passwordManagerProject/style.css
@@ -111,4 +111,60 @@ footer{
     cursor: pointer;
     padding: 5px;
 }
-/*Stopped at 19:34*/
+
+#login-modal, #signup-modal{
+	display: none;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+#password-modal, #add-password-modal{
+	display: none;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.copy{
+	cursor: pointer;
+}
+
+/*######### card #######"*/
+
+.container{
+	margin-top: 20px;
+	padding: 0 20px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap: 10px;
+	margin-bottom: 80px;
+}
+
+.card{
+	background-color: var(--text-hover-color);
+	display: flex;
+/*	flex-direction: column; */
+	align-items: center;
+	padding: 20px;
+	border-radius: 20px;
+}
+
+.actions{
+	margin: 5px;
+}
+
+.actions a{
+	display: none;
+	background-color: var(--link-background-color);
+	flex-direction: column;
+	padding: 5px;
+	align-items: center;
+}
+
+.actions:hover .action-item{
+	display: flex;
+}
+
+/* Stopped at 43:30 */
